--- a/demos/ide/demo.html
+++ b/demos/ide/demo.html
@@ -2,18 +2,17 @@
 <html>
 <head>
     <title></title>
-    <link rel="stylesheet" href="../../css/font-awesome.css">
-    <link rel="stylesheet" href="../../css/dock-manager.css">
-    <link rel="stylesheet" href="../../css/dock-wheel.css">
-    <link rel="stylesheet" href="../../css/dock-manager-style.css">
+    <link rel="stylesheet" href="../../node_modules/@fortawesome/fontawesome-free/css/all.css">
+    <link rel="stylesheet" href="../../dist/css/dock-manager.css">
+    <link rel="stylesheet" href="../../dist/css/dock-wheel.css">
+    <link rel="stylesheet" href="../../dist/css/dock-manager-style.css">
     <link rel="stylesheet" href="demo.css">
-    <script src="../../js/dockspawn.js" type="text/javascript"></script>
-
+    
 	<!-- Info Vis graphing lib. Used for dock tree visualization -->
-	<link type="text/css" rel="stylesheet" href="infovis/jit-base.css" />
-	<link type="text/css" rel="stylesheet" href="infovis/Spacetree.css" />
-	<script language="javascript" type="text/javascript" src="infovis/jit.js"></script>
-	<script language="javascript" type="text/javascript" src="infovis/dock_tree_vis.js"></script>
+	<!--<link type="text/css" rel="stylesheet" href="infovis/jit-base.css" /> -->
+	<!--<link type="text/css" rel="stylesheet" href="infovis/Spacetree.css" /> -->
+	<!--<script language="javascript" type="text/javascript" src="infovis/jit.js"></script> -->
+	<!--<script language="javascript" type="text/javascript" src="infovis/dock_tree_vis.js"></script> -->
 </head>
 
 <body>
@@ -55,104 +54,7 @@
             <li id="toolbox_window_5"><a href="#">Tool 5</a></li>
         </ul>
     </div>
-    <script>
-        var dockManager,
-            storeKey = 'lastState';
-
-        function refresh() {
-             localStorage.setItem(storeKey, '');
-             location.reload();
-        }
-
-        window.onload = function () {
-            // Convert a div to the dock manager. Panels can then be docked on to it
-            var divDockManager = document.getElementById('my_dock_manager');
-            dockManager = new dockspawn.DockManager(divDockManager);
-            dockManager.initialize();
-
-            var lastState = localStorage.getItem(storeKey);
-            if (lastState) {
-                dockManager.loadState(lastState);
-            }
-
-            // Let the dock manager element fill in the entire screen
-            window.onresize = function () {
-                dockManager.resize(
-                    window.innerWidth - (divDockManager.clientLeft + divDockManager.offsetLeft),
-                    window.innerHeight - (divDockManager.clientTop + divDockManager.offsetTop)
-                );
-            };
-            window.onresize();
-
-            dockManager.addLayoutListener({
-                onDock: function(self, dockNode){
-                    console.log('onDock: ', self, dockNode);
-                    localStorage.setItem(storeKey, dockManager.saveState());
-                },
-               onUndock:function(self, dockNode){
-                    console.log('onUndock: ', self, dockNode);
-                    localStorage.setItem(storeKey, dockManager.saveState());
-                },
-                onCreateDialog:function(self, dialog){
-                    console.log('onCreateDialog: ', self, dialog);
-                    localStorage.setItem(storeKey, dockManager.saveState());
-                },
-                onChangeDialogPosition:function(self, dialog, x, y){
-                    console.log('onCreateDialog: ', self, dialog, x, y);
-                    localStorage.setItem(storeKey, dockManager.saveState());
-                },
-                onResumeLayout:function(self){
-                    console.log('onResumeLayout: ', self);
-                    localStorage.setItem(storeKey, dockManager.saveState());
-               },
-               onClosePanel:function(self, panel){
-                    console.log('onClosePanel: ', self, panel);
-                    localStorage.setItem(storeKey, dockManager.saveState());
-               },
-               onHideDialog:function(self, dialog){
-                    console.log('onHideDialog: ', self, dialog);
-                    localStorage.setItem(storeKey, dockManager.saveState());
-               },
-               onShowDialog:function(self, dialog){
-                    console.log('onShowDialog: ', self, dialog);
-                    localStorage.setItem(storeKey, dockManager.saveState());
-               },
-               onTabsReorder:function(self, dialog){
-                    console.log('onTabsReorder: ', self, dialog);
-                    localStorage.setItem(storeKey, dockManager.saveState());
-               }
-            });
-
-
-            if (!lastState) {
-                // Convert existing elements on the page into "Panels".
-                // They can then be docked on to the dock manager
-                // Panels get a titlebar and a close button, and can also be
-                // converted to a floating dialog box which can be dragged / resized
-                var solution = new dockspawn.PanelContainer(document.getElementById("solution_window"), dockManager);
-                var properties = new dockspawn.PanelContainer(document.getElementById("properties_window"), dockManager);
-                var toolbox = new dockspawn.PanelContainer(document.getElementById("toolbox_window"), dockManager);
-                var outline = new dockspawn.PanelContainer(document.getElementById("outline_window"), dockManager);
-                var problems = new dockspawn.PanelContainer(document.getElementById("problems_window"), dockManager);
-                var output = new dockspawn.PanelContainer(document.getElementById("output_window"), dockManager);
-                var editor1 = new dockspawn.PanelContainer(document.getElementById("editor1_window"), dockManager);
-                var editor2 = new dockspawn.PanelContainer(document.getElementById("editor2_window"), dockManager);
-                var infovis = new dockspawn.PanelContainer(document.getElementById("infovis"), dockManager);
-
-                // Dock the panels on the dock manager
-                var documentNode = dockManager.context.model.documentManagerNode;
-                var outlineNode = dockManager.dockLeft(documentNode, outline, 0.15);
-                var solutionNode = dockManager.dockFill(outlineNode, solution);
-                var propertiesNode = dockManager.dockDown(outlineNode, properties, 0.6);
-                var outputNode = dockManager.dockDown(documentNode, output, 0.2);
-                var problemsNode = dockManager.dockRight(outputNode, problems, 0.40);
-                var toolboxNode = dockManager.dockRight(documentNode, toolbox, 0.20);
-                var editor1Node = dockManager.dockFill(documentNode, editor1);
-                var editor2Node = dockManager.dockFill(documentNode, editor2);
-                var infovisNode = dockManager.dockFill(documentNode, infovis);
-            }
-        };
-    </script>
+    <script type="module" src="../../dist/demo/demo.js"></script>
 
 </body>
 </html>
