--- a/demos/ide/demo.html
+++ b/demos/ide/demo.html
@@ -11,13 +11,18 @@
 
     <script src="js/jquery-3.4.1.min.js"></script>
 
-     <!-- Code Mirror Source Code Editor -->
+    <!-- Code Mirror Source Code Editor -->
     <link rel="stylesheet" href="./codemirror/codemirror.css">
     <style>
         .CodeMirror {height: 100%;}
     </style>
+    <link rel="stylesheet" href="./codemirror/addon/fold/foldgutter.css">
     <script src="./codemirror/codemirror.js"></script>
-    <script src="./codemirror/clike.js"></script>
+    <script src="./codemirror/addon/fold/foldcode.js"></script>
+    <script src="./codemirror/addon/fold/foldgutter.js"></script>
+    <script src="./codemirror/addon/fold/brace-fold.js"></script>
+    <script src="./codemirror/addon/fold/comment-fold.js"></script>
+    <script src="./codemirror/modes/clike/clike.js"></script>
     
     <!-- JS Tree -->
     <script type="text/javascript" src="./jstree/jstree.min.js"></script>
@@ -38,7 +43,7 @@
             <a href="javascript:refresh()" style="text-decoration: none; color: white;">Refresh</a>
         </div>
     </div>
-    <div id="dock_div" style="opacity: 0;">
+    <div id="dock_div" style="opacity: 0; height: 50%">
         <div id="my_dock_manager" class="my-dock-manager"></div>
         <div id="solution_window" data-panel-caption="Solution Explorer" data-panel-icon="fa fa-arrow-right"
             class="solution-window">
@@ -72,6 +77,7 @@
             </ul>
         </div>
     </div>
+
     <script type="module" src="../../dist/demo/demo.js"></script>
     <script src="js/sample-source.js"></script>
     <script src="js/demo-ide.js"></script>
