--- a/demos/ide/demo.html
+++ b/demos/ide/demo.html
@@ -35,7 +35,7 @@
     <script language="javascript" type="text/javascript" src="infovis/dock_tree_vis.js"></script>
 </head>
 
-<body>
+<body style="width: 100%; height: 100%">
     <div class="demo-header" id="header" style="width:100%">
         <div class="demo-header-title">Dock Spawn IDE Demo</div>
         <div class="demo-header-description">Pull a panel out from it's title bar and dock it elsewhere</div>
