prepare node package

--- a/demos/ide/demo.html
+++ b/demos/ide/demo.html
@@ -4,9 +4,9 @@
 <head>
     <title></title>
     <link rel="stylesheet" href="../../node_modules/@fortawesome/fontawesome-free/css/all.css">
-    <link rel="stylesheet" href="../../dist/css/dock-manager.css">
-    <link rel="stylesheet" href="../../dist/css/dock-wheel.css">
-    <link rel="stylesheet" href="../../dist/css/dock-manager-style.css">
+    <link rel="stylesheet" href="../../lib/css/dock-manager.css">
+    <link rel="stylesheet" href="../../lib/css/dock-wheel.css">
+    <link rel="stylesheet" href="../../lib/css/dock-manager-style.css">
     <link rel="stylesheet" href="demo.css">
 
     <script src="js/jquery-3.4.1.min.js"></script>
@@ -78,7 +78,7 @@
         </div>
     </div>
 
-    <script type="module" src="../../dist/demo/demo.js"></script>
+    <script type="module" src="demo.js"></script>
     <script src="js/sample-source.js"></script>
     <script src="js/demo-ide.js"></script>
     <script>
