fixes when dockmanager is not full size and a few type fixes

--- a/demos/ide/demo_smaller_dockcontainer.html
+++ b/demos/ide/demo_smaller_dockcontainer.html
@@ -36,14 +36,14 @@
 </head>
 
 <body style="width: 100%; height: 100%">
-    <div class="demo-header" id="header" style="width:100%;">
+    <div class="demo-header" id="header" style="width:100%">
         <div class="demo-header-title">Dock Spawn IDE Demo</div>
         <div class="demo-header-description">Pull a panel out from it's title bar and dock it elsewhere</div>
         <div style="padding: 15px; float: left;">
             <a href="javascript:refresh()" style="text-decoration: none; color: white;">Refresh</a>
         </div>
     </div>
-    <div id="dock_div" style="opacity: 0; height: calc(100% - 45px);">
+    <div id="dock_div" style="opacity:0;height:700px;width:1300px;top:150px;left:100px;position:absolute;">
         <div id="my_dock_manager" class="my-dock-manager" style="position: relative;"></div>
         <div id="solution_window" data-panel-caption="Solution Explorer" data-panel-icon="fa fa-arrow-right"
             class="solution-window">
