--- a/demos/ide/demo.html
+++ b/demos/ide/demo.html
@@ -3,7 +3,7 @@
 
 <head>
     <title></title>
-    <link rel="stylesheet" href="../../node_modules/@fortawesome/fontawesome-free/css/all.css">
+    <!--<link rel="stylesheet" href="../../node_modules/@fortawesome/fontawesome-free/css/all.css">-->
     <link rel="stylesheet" href="../../lib/css/dock-manager.css">
     <link rel="stylesheet" href="../../lib/css/dock-wheel.css">
     <link rel="stylesheet" href="../../lib/css/dock-manager-style.css">
@@ -45,7 +45,7 @@
     </div>
     <div id="dock_div" style="opacity: 0; height: calc(100% - 45px);">
         <div id="my_dock_manager" class="my-dock-manager" style="position: relative;"></div>
-        <div id="solution_window" data-panel-caption="Solution Explorer" data-panel-icon="fa fa-arrow-right"
+        <div id="solution_window" data-panel-caption="Solution Explorer" data-panel-icon="test.png"
             class="solution-window">
             <ul>
                 <li id="solution_window_1">
