--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				</p>
 				
 				<p>
-					<a id="view-demo" class="btn btn-info btn-large" href="https://node-projects.github.io/dock-spawn-ts/#demos">View Demo</a>
+					<a class="btn btn-info btn-large" href="https://node-projects.github.io/dock-spawn-ts/#demos">View Demo</a>
 					<a class="btn btn-info btn-large" href="https://github.com/node-projects/dock-spawn-ts">View on GitHub</a>
 
 			</p></div>
@@ -93,6 +93,7 @@
         </div>
       </div>
 
+	<div id="demos"></div>
 	<!-- Demos sub-section -->
     <hr>
 	<br>
