--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 			<div class="span5">
 				<h1>Dock Spawn TS</h1>
 				<p>
-					<span style="color: yellow">Dock Spawn TS is a Typescript fork of Dock Spawn <a href="http://www.dockspawn.com/">http://www.dockspawn.com/</a> 
-					wich was originaly developed by <a href="https://github.com/coderespawn">https://github.com/coderespawn</a></span>
+					<span style="color: yellow">Dock Spawn TS is a Typescript fork of Dock Spawn, a Docking Framework for HTML. 
+					It was originaly developed by <a href="https://github.com/coderespawn">https://github.com/coderespawn</a></span>
 					<br><br>
 					Dock Spawn is a web based dock layout engine that aids in creating flexible user interfaces by enabling
 					panels to be docked on the screen similar to Visual Studio IDE
